[package]
name = "gsuite-cert"
version = "0.3.0"
authors = ["Arthur Hugon <dev@planchon.xyz>"]
edition = "2018"
publish = false

[dependencies]
headless_chrome = { git = "https://github.com/joxcat/rust-headless-chrome.git" }
serde = "1.0"
serde_json = "1.0"
base64 = "0.10"
log = "0.4"
badlog = "1.1"
clap = "2.33"
arthur-hugon-tools = { git = "https://github.com/joxcat/arthur-hugon-tools.git", features = ["security","urlenc","chrome"] }
